# ic-canister-storage

./: .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  rust-toolchain.toml  test.sh  upload.sh
sources/: source.did
src/: business.rs  explore.rs  http.rs  lib.rs  types.rs
src/common/: apis.rs  did.rs
src/stable/: business.rs  common.rs  mod.rs  state.rs
src/stable/v000/: business.rs  mod.rs  permission.rs  schedule.rs  types.rs
src/stable/v000/types/: _canister_kit.rs  _init.rs  _topic.rs  init.rs  topic.rs  upgrade.rs
src/stable/v001/: business.rs  mod.rs  permission.rs  types.rs  upgrade.rs
src/stable/v001/types/: _topic.rs  _upgrade.rs  assets.rs  canister_kit.rs  common.rs  example.rs  stable.rs  topic.rs  upload.rs
tests/: business.rs  canister.rs  common.rs  test.sh  upgrade.rs  upload.rs
tests/service/: mod.rs
tests/util/: mod.rs
